# laeraor

./: Cargo.toml  sqlx-data.json  test.db
migrations/: 20220915024231_init.sql
src/: main.rs  model.rs
src/authserver/: authenticate.rs
src/model/: profile.rs  token.rs  user.rs
src/mojang/: token.rs
