[package]
name = "laeraor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = {version = "0.11.11", features = ["json"]}
serde_json = { version = "1.0.85" }
thiserror = "1.0.35"
