[package]
name = "laeraor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "sqlite", "offline", "all"] }
anyhow = "1.0.65"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = { version = "0.4.22", features = ["serde"] }
once_cell = "1.14.0"
dotenvy = "0.15.3"

[profile.dev.package.sqlx-macros]
opt-level = 3
